k8s/21-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels: { app: worker }
  template:
    metadata:
      labels: { app: worker }
    spec:
      serviceAccountName: ticketing-sa
      containers:
        - name: worker
          image: ghcr.io/mmaric76/ticketing-worker:latest
          livenessProbe:
            exec: { command: ["sh","-c","pgrep -f worker.js"] }
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits:   { cpu: "250m", memory: "128Mi" }
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
